# osmotron

./: .travis.yml  CMakeLists.txt  ExportHandler.h  GeometryConverter.h  LogginProblemReporter.h  README.md  main.cpp
b64/: base64.cpp  base64.h
test/: testrunner.cpp
test/resources/: simpleNode.osm
